# roz

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: do-task.md
.github/workflows/: ci.yml  publish.yml
jasmine/: __init__.py  cli.py
jasmine/commands/: __init__.py  cloud.py  search.py
jasmine/content/industry-standard-cloud/: RESEARCH.md  RESOURCES.md
jasmine/content/industry-standard-cloud/01-OPS/OPS01-Organization-Operations-Priorities/: OPS01-BP01-Evaluate-External-Customer-Needs.md  OPS01-BP02-Evaluate-Internal-Customer-Needs.md  OPS01-BP03-Evaluate-Governance-Requirements.md  OPS01-BP04-Evaluate-Compliance-Requirements.md  OPS01-BP05-Evaluate-Threat-Landscape.md  OPS01-BP06-Evaluate-Tradeoffs.md  README.md
jasmine/content/industry-standard-cloud/01-OPS/OPS02-Organization-Operating-Model/: OPS02-BP01-Resources-Have-Identified-Owners.md  OPS02-BP02-Processes-Have-Identified-Owners.md  OPS02-BP03-Operations-Have-Identified-Owners.md  OPS02-BP04-Team-Members-Know-Responsibilities.md  OPS02-BP05-Mechanisms-To-Identify-Ownership.md  OPS02-BP06-Mechanisms-For-Requests.md  README.md
jasmine/content/industry-standard-cloud/01-OPS/OPS03-Organization-Organizational-Culture/: OPS03-BP01-Executive-Sponsorship.md  OPS03-BP02-Team-Members-Empowered.md  OPS03-BP03-Escalation-Encouraged.md  OPS03-BP04-Communications-Clear.md  OPS03-BP05-Experimentation-Encouraged.md  OPS03-BP06-Skill-Development.md  README.md
jasmine/content/industry-standard-cloud/01-OPS/OPS04-Prepare-Implement-Observability/: OPS04-BP01-Identify-KPIs.md  OPS04-BP02-Application-Telemetry.md  OPS04-BP03-User-Experience-Telemetry.md  OPS04-BP04-Dependency-Telemetry.md  OPS04-BP05-Distributed-Tracing.md  README.md
jasmine/content/industry-standard-cloud/01-OPS/OPS05-Prepare-Development-And-Integration/: OPS05-BP01-Use-Version-Control.md  OPS05-BP02-Test-And-Validate.md  OPS05-BP03-Configuration-Management.md  OPS05-BP04-Build-Deployment-Management.md  OPS05-BP05-Patch-Management.md  OPS05-BP06-Share-Design-Standards.md  OPS05-BP07-Code-Quality.md  README.md
jasmine/content/industry-standard-cloud/01-OPS/OPS06-Prepare-Mitigation-Of-Deployment-Risks/: OPS06-BP01-Plan-For-Unsuccessful-Changes.md  OPS06-BP02-Test-Deployments.md  OPS06-BP03-Safe-Deployment-Strategies.md  (+2 more)
jasmine/content/industry-standard-software/: README.md
roz/: __init__.py  cli.py
roz/commands/: cloud.py  search.py
tests/: __init__.py  test_cli.py
(+309 files in other folders)
